--- a/packages/router/public/index.html
+++ b/packages/router/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <base href="http://localhost:3001/">
   </head>
   <body>
     <div id="root"></div>
